@@ -25,11 +25,11 @@ Description:
     idea of adding just the baseline of what's needed to start really
     working with the resource.
     
-    Once the generator has run, you'll need to add a declaration to your
-    config/routes.rb file to hook up the rules that'll point URLs to this
-    new resource. If you create a resource like "scaffold_resource post",
-    you'll need to add "map.resources :posts" (notice the plural form) in
-    the routes file. Then your new resource is accessible from /posts.
+    The generator also adds a declaration to your config/routes.rb file
+    to hook up the rules that'll point URLs to this new resource. If you 
+    create a resource like "scaffold_resource post", it will add
+    "map.resources :posts" (notice the plural form) in the routes file, 
+    making your new resource accessible from /posts. 
 
 Examples:
     ./script/generate scaffold_resource post # no attributes, view will be anemic
